--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,7 @@ body {
 	margin-top: 8px;
 	margin-left: 3px;
 	color: #fff;
+	background: #000;
 	font-size: 15px;
 	line-height: 15px;
 	text-align: center;
