--- a/css/base.css
+++ b/css/base.css
@@ -60,3 +60,56 @@ input[type="search"],input[type="tel"],textarea{
     background: url("../img/sprites.png") no-repeat;
     background-size: 200px 200px;
 }
+/* 顶部通栏 */
+.jd_topBar {
+    width: 100%;
+    height: 45px;
+    border-bottom: 1px solid #e0e0e0;
+    background: url('../img/header-bg.png') repeat-x;
+    background-size: 1px 44px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.jd_topBar .icon_back {
+    width: 40px;
+    height: 44px;
+    padding: 12px 10px;
+    background-position: -20px 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-clip: content-box;
+    /* 以什么位置显示背景图 */
+    background-origin: content-box;
+    /* 以什么位置定位背景图 */
+}
+.jd_topBar h3 {
+    text-align: center;
+    line-height: 44px;
+    font-size: 16px;
+    font-weight: normal;
+}
+.jd_topBar form {
+    width: 100%;
+    padding: 0 40px;
+}
+.jd_topBar form input {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 30px;
+    margin-top: 7px;
+}
+.jd_topBar .icon_menu {
+    width: 40px;
+    height: 44px;
+    padding: 12px 10px;
+    background-position: -60px 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+
+    background-clip: content-box;
+    background-origin: content-box;
+}
